k8s-apps/immich/templates/share-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server-share
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.kubernetes.io/target: home.terence.cloud
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    traefik.ingress.kubernetes.io/router.pathmatcher: PathRegexp
spec:
  ingressClassName: traefik
  rules:
    - host: imms.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  name: http
            path: /(s|_app|api/(assets|albums|timeline)|.+\.(css|png)).*
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - imms.terence.cloud
      secretName: immich-share-tls
